--- a/Witchcraft/Witchcraft/Witchcraft.vcxproj
+++ b/Witchcraft/Witchcraft/Witchcraft.vcxproj
@@ -115,7 +115,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="entry_point.cpp" />
+    <ClCompile Include="error_log_manager.cpp" />
     <ClCompile Include="test.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="engine.h" />
+    <ClInclude Include="error_log_manager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
