Added sample tests for Error Log Manager
1. sample tests run correctly (?)

2. We need a ticket to finish working on these tests

Co-Authored-By: ellielove <ellielove@users.noreply.github.com>
Co-Authored-By: paciFIST Studios <pacifist-studios@users.noreply.github.com>

--- a/Witchcraft/Witchcraft/Witchcraft.vcxproj
+++ b/Witchcraft/Witchcraft/Witchcraft.vcxproj
@@ -118,6 +118,7 @@
     <ClCompile Include="engine\tests_engine.cc" />
     <ClCompile Include="entry_point.cc" />
     <ClCompile Include="logging\error_log_manager.cc" />
+    <ClCompile Include="logging\tests_error_log_manager.cc" />
     <ClCompile Include="test.cc" />
   </ItemGroup>
   <ItemGroup>
