--- a/Witchcraft/Witchcraft/Witchcraft.vcxproj
+++ b/Witchcraft/Witchcraft/Witchcraft.vcxproj
@@ -119,19 +119,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="engine\exception.cpp" />
+    <ClCompile Include="engine\resource_manager\resource_manager.cpp" />
     <ClCompile Include="entry_point.cc" />
-    <ClCompile Include="exception.cpp" />
     <ClCompile Include="logging\error_log_manager.cc" />
     <ClCompile Include="logging\tests_error_log_manager.cc" />
-    <ClCompile Include="resource_manager.cpp" />
     <ClCompile Include="test.cc" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine\engine.h" />
-    <ClInclude Include="exception.h" />
+    <ClInclude Include="engine\exception.h" />
+    <ClInclude Include="engine\resource_manager\resource_manager.h" />
     <ClInclude Include="logging\assert_with_message.h" />
     <ClInclude Include="logging\error_log_manager.h" />
-    <ClInclude Include="resource_manager.h" />
     <ClInclude Include="unit_testing_switch.h" />
     <ClInclude Include="utility\MACROS.h" />
     <ClInclude Include="utility\utility.h" />
