--- a/Witchcraft/Witchcraft/Witchcraft.vcxproj.filters
+++ b/Witchcraft/Witchcraft/Witchcraft.vcxproj.filters
@@ -42,11 +42,14 @@
     <ClCompile Include="logging\tests_error_log_manager.cc">
       <Filter>Source Files\logging</Filter>
     </ClCompile>
-    <ClCompile Include="engine\exception.cpp">
+    <ClCompile Include="engine\exception.cc">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="resource_manager\resource_manager.cpp">
+    <ClCompile Include="resource_manager\resource_manager.cc">
       <Filter>Source Files\resource_manager</Filter>
+    </ClCompile>
+    <ClCompile Include="tests_exception.cc">
+      <Filter>Source Files\engine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
