Utility FN unit tests
Added unit tests for utility fns:

- utility::read_file_to_string(path)
- utility::file_exists(path)

--- a/Witchcraft/Witchcraft/Witchcraft.vcxproj
+++ b/Witchcraft/Witchcraft/Witchcraft.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="resource_manager\resource_manager.cc" />
     <ClCompile Include="test.cc" />
     <ClCompile Include="tests_exception.cc" />
+    <ClCompile Include="utility\tests_utility.cc" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine\engine.h" />
