--- a/Witchcraft/Witchcraft/Witchcraft.vcxproj.filters
+++ b/Witchcraft/Witchcraft/Witchcraft.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="utility\tests_utility.cc">
       <Filter>Source Files\utility</Filter>
     </ClCompile>
+    <ClCompile Include="resource_manager\tests_resource_manager.cc">
+      <Filter>Source Files\resource_manager</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="logging\assert_with_message.h">
@@ -78,6 +81,9 @@
       <Filter>Source Files\engine</Filter>
     </ClInclude>
     <ClInclude Include="resource_manager\resource_manager.h">
+      <Filter>Source Files\resource_manager</Filter>
+    </ClInclude>
+    <ClInclude Include="resource_manager\resource.h">
       <Filter>Source Files\resource_manager</Filter>
     </ClInclude>
   </ItemGroup>
