--- a/Witchcraft/Witchcraft/Witchcraft.vcxproj
+++ b/Witchcraft/Witchcraft/Witchcraft.vcxproj
@@ -137,9 +137,9 @@
     <ClInclude Include="logging\assert_with_message.h" />
     <ClInclude Include="logging\error_log_manager.h" />
     <ClInclude Include="render_manager\2D_render_manager.h" />
-    <ClInclude Include="render_manager\SDL2_render_manager.h" />
+    <ClInclude Include="render_manager\SDL2_2D_render_manager.h" />
     <ClInclude Include="render_manager\SDL2_render_resource.h" />
-    <ClInclude Include="render_manager\SDL_render_object.h" />
+    <ClInclude Include="render_manager\SDL_2D_render_object.h" />
     <ClInclude Include="render_manager\sprite_object.h" />
     <ClInclude Include="resource_manager\resource.h" />
     <ClInclude Include="resource_manager\resource_manager.h" />
