--- a/witchcraft_sln/witchcraft/witchcraft.cfg
+++ b/witchcraft_sln/witchcraft/witchcraft.cfg
@@ -1,1 +1,3 @@
-<resources><resource UID="0" type="text" filename="witchcraft.cfg" scenescope="0">Witchcraft</resource></resources>
+<resources>
+	<resource UID="0" type="text" filename="witchcraft.cfg" scenescope="0">Witchcraft</resource>	
+</resources>
