--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ Witchcraft/lib/rapidxml/rapidxml-1.13/*
 asset_lib/*
 witchcraft_sln/witchcraft/asset/neko.png
 witchcraft_sln/witchcraft/asset/whirlwind.png
+16_Games/*
