Render Manager Update
We're capping off the work on the render manager, just so we can deliver a work unit at all, there's multiple branches waiting for a merge back to main, and we need to move on

--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="render_manager\SDL_2D_render_object.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="render_manager\2D_sprite_object.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="logging\assert_with_message.h">
