--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="entry_point.cc" />
     <ClCompile Include="logging\error_log_manager.cc" />
     <ClCompile Include="logging\tests_error_log_manager.cc" />
+    <ClCompile Include="render_manager\2D_sprite_object.cpp" />
     <ClCompile Include="render_manager\SDL2_2D_render_manager.cpp" />
     <ClCompile Include="render_manager\SDL_2D_render_object.cpp" />
     <ClCompile Include="resource_manager\resource_manager.cc" />
