Rename actually complete

--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -142,8 +142,8 @@
     <ClInclude Include="engine\exception.h" />
     <ClInclude Include="logging\assert_with_message.h" />
     <ClInclude Include="logging\error_log_manager.h" />
-    <ClInclude Include="render_manager\2D_render_manager.h" />
     <ClInclude Include="render_manager\2D_sprite_object.h" />
+    <ClInclude Include="render_manager\render_manager_base.h" />
     <ClInclude Include="render_manager\SDL2_2D_render_manager.h" />
     <ClInclude Include="render_manager\SDL2_render_resource.h" />
     <ClInclude Include="render_manager\SDL_2D_render_object.h" />
