--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
@@ -95,9 +95,6 @@
     <ClInclude Include="render_manager\SDL2_render_resource.h">
       <Filter>Source Files\render_manager</Filter>
     </ClInclude>
-    <ClInclude Include="render_manager\2D_render_manager.h">
-      <Filter>Source Files\render_manager</Filter>
-    </ClInclude>
     <ClInclude Include="render_manager\SDL2_2D_render_manager.h">
       <Filter>Source Files\render_manager</Filter>
     </ClInclude>
@@ -109,6 +106,9 @@
     </ClInclude>
     <ClInclude Include="string_constants.h">
       <Filter>Source Files\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="render_manager\render_manager_base.h">
+      <Filter>Source Files\render_manager</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
