--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
@@ -57,14 +57,14 @@
     <ClCompile Include="resource_manager\tests_resource_manager.cc">
       <Filter>Source Files\resource_manager</Filter>
     </ClCompile>
-    <ClCompile Include="render_manager\SDL2_2D_render_manager.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="render_manager\2D_sprite_object.cpp">
+      <Filter>Source Files\render_manager</Filter>
     </ClCompile>
     <ClCompile Include="render_manager\SDL_2D_render_object.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\render_manager</Filter>
     </ClCompile>
-    <ClCompile Include="render_manager\2D_sprite_object.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="render_manager\SDL2_2D_render_manager.cpp">
+      <Filter>Source Files\render_manager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
