--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ witchcraft_sln/witchcraft/asset/whirlwind.png
 *.clip
 diablo_pitch.pdf
 witchcraft_sln/visible ram values.png
+witchcraft_sln/witchcraft/Debug/*
