--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
@@ -89,9 +89,6 @@
     <ClInclude Include="resource_manager\resource.h">
       <Filter>Source Files\resource_manager</Filter>
     </ClInclude>
-    <ClInclude Include="render_manager\SDL2_render_resource.h">
-      <Filter>Source Files\render_manager</Filter>
-    </ClInclude>
     <ClInclude Include="render_manager\SDL2_2D_render_manager.h">
       <Filter>Source Files\render_manager</Filter>
     </ClInclude>
@@ -105,6 +102,9 @@
       <Filter>Source Files\utility</Filter>
     </ClInclude>
     <ClInclude Include="render_manager\render_manager_base.h">
+      <Filter>Source Files\render_manager</Filter>
+    </ClInclude>
+    <ClInclude Include="render_manager\render_resource.h">
       <Filter>Source Files\render_manager</Filter>
     </ClInclude>
   </ItemGroup>
