--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -129,9 +129,12 @@
     <ClCompile Include="logging\error_log_manager.cc" />
     <ClCompile Include="logging\tests_error_log_manager.cc" />
     <ClCompile Include="render_manager\2D_sprite_object.cpp" />
+    <ClCompile Include="render_manager\render_resource.cc" />
     <ClCompile Include="render_manager\SDL2_2D_render_manager.cpp" />
     <ClCompile Include="render_manager\SDL_2D_render_object.cpp" />
+    <ClCompile Include="render_manager\tests_render_resource.cc" />
     <ClCompile Include="resource_manager\resource_manager.cc" />
+    <ClCompile Include="resource_manager\tests_resource.cc" />
     <ClCompile Include="resource_manager\tests_resource_manager.cc" />
     <ClCompile Include="test.cc" />
     <ClCompile Include="tests_exception.cc" />
