--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -128,10 +128,10 @@
     <ClCompile Include="entry_point.cc" />
     <ClCompile Include="logging\error_log_manager.cc" />
     <ClCompile Include="logging\tests_error_log_manager.cc" />
-    <ClCompile Include="render_manager\2D_sprite_object.cpp" />
+    <ClCompile Include="render_manager\2d_render_manager.cc" />
+    <ClCompile Include="render_manager\2d_render_object.cc" />
+    <ClCompile Include="render_manager\2d_sprite_object.cc" />
     <ClCompile Include="render_manager\render_resource.cc" />
-    <ClCompile Include="render_manager\SDL2_2D_render_manager.cpp" />
-    <ClCompile Include="render_manager\SDL_2D_render_object.cpp" />
     <ClCompile Include="render_manager\tests_render_resource.cc" />
     <ClCompile Include="resource_manager\resource_manager.cc" />
     <ClCompile Include="resource_manager\tests_resource.cc" />
@@ -144,11 +144,11 @@
     <ClInclude Include="engine\engine.h" />
     <ClInclude Include="engine\exception.h" />
     <ClInclude Include="logging\error_log_manager.h" />
-    <ClInclude Include="render_manager\2D_sprite_object.h" />
+    <ClInclude Include="render_manager\2d_render_manager.h" />
+    <ClInclude Include="render_manager\2d_render_object.h" />
+    <ClInclude Include="render_manager\2d_sprite_object.h" />
     <ClInclude Include="render_manager\render_manager_base.h" />
     <ClInclude Include="render_manager\render_resource.h" />
-    <ClInclude Include="render_manager\SDL2_2D_render_manager.h" />
-    <ClInclude Include="render_manager\SDL_2D_render_object.h" />
     <ClInclude Include="resource_manager\resource.h" />
     <ClInclude Include="resource_manager\resource_manager.h" />
     <ClInclude Include="string_constants.h" />
