--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
@@ -57,15 +57,6 @@
     <ClCompile Include="resource_manager\tests_resource_manager.cc">
       <Filter>Source Files\resource_manager</Filter>
     </ClCompile>
-    <ClCompile Include="render_manager\2D_sprite_object.cpp">
-      <Filter>Source Files\render_manager</Filter>
-    </ClCompile>
-    <ClCompile Include="render_manager\SDL_2D_render_object.cpp">
-      <Filter>Source Files\render_manager</Filter>
-    </ClCompile>
-    <ClCompile Include="render_manager\SDL2_2D_render_manager.cpp">
-      <Filter>Source Files\render_manager</Filter>
-    </ClCompile>
     <ClCompile Include="resource_manager\tests_resource.cc">
       <Filter>Source Files\resource_manager</Filter>
     </ClCompile>
@@ -73,6 +64,15 @@
       <Filter>Source Files\render_manager</Filter>
     </ClCompile>
     <ClCompile Include="render_manager\render_resource.cc">
+      <Filter>Source Files\render_manager</Filter>
+    </ClCompile>
+    <ClCompile Include="render_manager\2d_render_manager.cc">
+      <Filter>Source Files\render_manager</Filter>
+    </ClCompile>
+    <ClCompile Include="render_manager\2d_render_object.cc">
+      <Filter>Source Files\render_manager</Filter>
+    </ClCompile>
+    <ClCompile Include="render_manager\2d_sprite_object.cc">
       <Filter>Source Files\render_manager</Filter>
     </ClCompile>
   </ItemGroup>
@@ -98,15 +98,6 @@
     <ClInclude Include="resource_manager\resource.h">
       <Filter>Source Files\resource_manager</Filter>
     </ClInclude>
-    <ClInclude Include="render_manager\SDL2_2D_render_manager.h">
-      <Filter>Source Files\render_manager</Filter>
-    </ClInclude>
-    <ClInclude Include="render_manager\SDL_2D_render_object.h">
-      <Filter>Source Files\render_manager</Filter>
-    </ClInclude>
-    <ClInclude Include="render_manager\2D_sprite_object.h">
-      <Filter>Source Files\render_manager</Filter>
-    </ClInclude>
     <ClInclude Include="string_constants.h">
       <Filter>Source Files\utility</Filter>
     </ClInclude>
@@ -114,6 +105,15 @@
       <Filter>Source Files\render_manager</Filter>
     </ClInclude>
     <ClInclude Include="render_manager\render_resource.h">
+      <Filter>Source Files\render_manager</Filter>
+    </ClInclude>
+    <ClInclude Include="render_manager\2d_render_manager.h">
+      <Filter>Source Files\render_manager</Filter>
+    </ClInclude>
+    <ClInclude Include="render_manager\2d_render_object.h">
+      <Filter>Source Files\render_manager</Filter>
+    </ClInclude>
+    <ClInclude Include="render_manager\2d_sprite_object.h">
       <Filter>Source Files\render_manager</Filter>
     </ClInclude>
   </ItemGroup>
