--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ witchcraft_sln/witchcraft/asset/whirlwind.png
 diablo_pitch.pdf
 witchcraft_sln/visible ram values.png
 witchcraft_sln/witchcraft/Debug/*
+research/*
