--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -137,6 +137,9 @@
     <ClCompile Include="resource_manager\tests_resource.cc" />
     <ClCompile Include="resource_manager\tests_resource_manager.cc" />
     <ClCompile Include="scene_manager\test_2d_layer.cc" />
+    <ClCompile Include="scene_manager\test_2d_scene_manager.cc" />
+    <ClCompile Include="scene_manager\test_scene_listener.cc" />
+    <ClCompile Include="scene_manager\test_timer.cc" />
     <ClCompile Include="test.cc" />
     <ClCompile Include="tests_exception.cc" />
     <ClCompile Include="utility\tests_utility.cc" />
@@ -157,7 +160,7 @@
     <ClInclude Include="scene_manager\scene_listener.h" />
     <ClInclude Include="scene_manager\scene_object.h" />
     <ClInclude Include="scene_manager\test_scene_object.h" />
-    <ClInclude Include="scene_manager\timer_h.h" />
+    <ClInclude Include="scene_manager\timer.h" />
     <ClInclude Include="string_constants.h" />
     <ClInclude Include="unit_testing_switch.h" />
     <ClInclude Include="utility\utility.h" />
