--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
@@ -57,9 +57,6 @@
     <ClCompile Include="utility\tests_utility.cc">
       <Filter>Source Files\utility</Filter>
     </ClCompile>
-    <ClCompile Include="render_manager\tests_render_resource.cc">
-      <Filter>Source Files\render_manager</Filter>
-    </ClCompile>
     <ClCompile Include="render_manager\render_resource.cc">
       <Filter>Source Files\render_manager</Filter>
     </ClCompile>
@@ -89,6 +86,9 @@
     </ClCompile>
     <ClCompile Include="resource_manager\resource_manager__tst.cc">
       <Filter>Source Files\resource_manager</Filter>
+    </ClCompile>
+    <ClCompile Include="render_manager\render_resource__tst.cc">
+      <Filter>Source Files\render_manager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
