--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -132,7 +132,7 @@
     <ClCompile Include="render_manager\2d_render_object.cc" />
     <ClCompile Include="render_manager\2d_sprite_object.cc" />
     <ClCompile Include="render_manager\render_resource.cc" />
-    <ClCompile Include="render_manager\tests_render_resource.cc" />
+    <ClCompile Include="render_manager\render_resource__tst.cc" />
     <ClCompile Include="resource_manager\resource_manager.cc" />
     <ClCompile Include="resource_manager\resource_manager__tst.cc" />
     <ClCompile Include="resource_manager\resource__tst.cc" />
