--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
@@ -110,9 +110,6 @@
     <ClInclude Include="unit_testing_switch.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="utility\utility.h">
-      <Filter>Source Files\utility</Filter>
-    </ClInclude>
     <ClInclude Include="engine\exception.h">
       <Filter>Source Files\engine</Filter>
     </ClInclude>
@@ -157,6 +154,12 @@
     </ClInclude>
     <ClInclude Include="scene_manager\timer.h">
       <Filter>Source Files\scene_manager</Filter>
+    </ClInclude>
+    <ClInclude Include="utility\utility.h">
+      <Filter>Source Files\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="uninitialized_values.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
