--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
@@ -69,18 +69,6 @@
     <ClCompile Include="render_manager\2d_sprite_object.cc">
       <Filter>Source Files\render_manager</Filter>
     </ClCompile>
-    <ClCompile Include="scene_manager\test_2d_layer.cc">
-      <Filter>Source Files\scene_manager</Filter>
-    </ClCompile>
-    <ClCompile Include="scene_manager\test_timer.cc">
-      <Filter>Source Files\scene_manager</Filter>
-    </ClCompile>
-    <ClCompile Include="scene_manager\test_scene_listener.cc">
-      <Filter>Source Files\scene_manager</Filter>
-    </ClCompile>
-    <ClCompile Include="scene_manager\test_2d_scene_manager.cc">
-      <Filter>Source Files\scene_manager</Filter>
-    </ClCompile>
     <ClCompile Include="resource_manager\resource__tst.cc">
       <Filter>Source Files\resource_manager</Filter>
     </ClCompile>
@@ -101,6 +89,21 @@
     </ClCompile>
     <ClCompile Include="resource_manager\resource.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="scene_manager\2d_layer__tst.cc">
+      <Filter>Source Files\scene_manager</Filter>
+    </ClCompile>
+    <ClCompile Include="scene_manager\2d_scene_manager__tst.cc">
+      <Filter>Source Files\scene_manager</Filter>
+    </ClCompile>
+    <ClCompile Include="scene_manager\scene_listener__tst.cc">
+      <Filter>Source Files\scene_manager</Filter>
+    </ClCompile>
+    <ClCompile Include="scene_manager\scene_object__tst.cc">
+      <Filter>Source Files\scene_manager</Filter>
+    </ClCompile>
+    <ClCompile Include="scene_manager\timer__tst.cc">
+      <Filter>Source Files\scene_manager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -150,9 +153,6 @@
       <Filter>Source Files\scene_manager</Filter>
     </ClInclude>
     <ClInclude Include="scene_manager\2d_scene_manager.h">
-      <Filter>Source Files\scene_manager</Filter>
-    </ClInclude>
-    <ClInclude Include="scene_manager\test_scene_object.h">
       <Filter>Source Files\scene_manager</Filter>
     </ClInclude>
     <ClInclude Include="scene_manager\timer.h">
