--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -140,10 +140,11 @@
     <ClCompile Include="resource_manager\resource_manager.cc" />
     <ClCompile Include="resource_manager\resource_manager__tst.cc" />
     <ClCompile Include="resource_manager\resource__tst.cc" />
-    <ClCompile Include="scene_manager\test_2d_layer.cc" />
-    <ClCompile Include="scene_manager\test_2d_scene_manager.cc" />
-    <ClCompile Include="scene_manager\test_scene_listener.cc" />
-    <ClCompile Include="scene_manager\test_timer.cc" />
+    <ClCompile Include="scene_manager\2d_layer__tst.cc" />
+    <ClCompile Include="scene_manager\2d_scene_manager__tst.cc" />
+    <ClCompile Include="scene_manager\scene_listener__tst.cc" />
+    <ClCompile Include="scene_manager\scene_object__tst.cc" />
+    <ClCompile Include="scene_manager\timer__tst.cc" />
     <ClCompile Include="test.cc" />
     <ClCompile Include="tests_exception.cc" />
     <ClCompile Include="utility\tests_utility.cc" />
@@ -163,7 +164,6 @@
     <ClInclude Include="scene_manager\2d_scene_manager.h" />
     <ClInclude Include="scene_manager\scene_listener.h" />
     <ClInclude Include="scene_manager\scene_object.h" />
-    <ClInclude Include="scene_manager\test_scene_object.h" />
     <ClInclude Include="scene_manager\timer.h" />
     <ClInclude Include="string_constants.h" />
     <ClInclude Include="uninitialized_values.h" />
