Update vs filters for animation resource

--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="render_manager\2d_render_object.h" />
     <ClInclude Include="render_manager\2d_sprite_animation.h" />
     <ClInclude Include="render_manager\2d_sprite_object.h" />
+    <ClInclude Include="render_manager\animation_resource.h" />
     <ClInclude Include="render_manager\render_manager_base.h" />
     <ClInclude Include="render_manager\render_resource.h" />
     <ClInclude Include="resource_manager\resource.h" />
